# Workspace member of the root visionclaw-server workspace at /Cargo.toml.
# The pre-existing solid-pod-rs `rev = "main"` resolution failure was
# fixed in ed940f9ea (changed to `branch = "main"`), so the root workspace
# now resolves cleanly and this crate participates as a normal member.
# For standalone build during isolated CI, use
#   cargo build --manifest-path crates/visionclaw-contracts/Cargo.toml --offline
# with a vendored registry.

[package]
name = "visionclaw-contracts"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Cross-boundary typed contracts for VisionClaw <-> agentbox <-> forum <-> XR client"
authors = ["jjohare <github@thedreamlab.uk>"]
repository = "https://github.com/jjohare/AR-AI-Knowledge-Graph"
readme = "README.md"

# This crate is a leaf node in the workspace: it pulls no actix, no neo4rs,
# no GPU deps. It must remain trivially buildable from a clean checkout so
# every consumer (visionclaw server, agentbox, forum, XR client) can depend
# on it without dragging the host's dependency graph in.

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

[dependencies.ts-rs]
version = "10"
features = ["serde-compat", "chrono-impl", "uuid-impl"]
optional = true

[dev-dependencies]
insta = { version = "1.39", features = ["json"] }
serde_json = "1.0"

[features]
default = []
# Opt-in feature that turns on ts-rs derives and the `cargo test --features
# typescript-export ts_export` flow that emits .d.ts files into ./bindings.
# Default builds do NOT pull ts-rs, keeping consumer build times unaffected.
typescript-export = ["dep:ts-rs"]
