[package]
name = "visionclaw-domain"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "VisionClaw domain model: types, errors, events, port traits"
authors = ["jjohare <github@thedreamlab.uk>"]
repository = "https://github.com/jjohare/AR-AI-Knowledge-Graph"

[lib]
path = "src/lib.rs"

[dependencies]
# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pure-Rust helpers
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
log = "0.4"
async-trait = "0.1"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Optional auth helper (used by graph_export password gate). Pulled in here
# so we can validate import contracts without depending on the monolith.
bcrypt = "0.15"

# TypeScript bindgen + struct-level validation. The monolith uses these
# derive macros on every settings DTO; keeping them in domain means
# `PhysicsSettings` (and friends) carry the full derive set once, and the
# monolith re-exports without re-deriving.
specta = { version = "2.0.0-rc.22", features = ["derive", "export"] }
validator = { version = "0.18", features = ["derive"] }
thiserror = "2.0"

# Async primitives (speech.rs uses tokio::sync::mpsc; claude_flow uses time/net/io)
tokio = { version = "1", default-features = false, features = ["sync", "time", "net", "io-util", "rt"] }

# WebSocket / base64 error types referenced by SpeechError. We only import the
# error types — neither crate's runtime is needed in domain.
tungstenite = { version = "0.21", default-features = false }
base64 = { version = "0.21", default-features = false }

# Codegen tuning — fast incremental builds; downstream binaries handle LTO.
[lints]

[features]
default = []

[dev-dependencies]
serde_json = "1.0"
