[package]
name = "visionclaw-xr-presence"
version = "0.1.0"
edition = "2021"
description = "Transport-agnostic XR presence library for VisionClaw (PRD-008). Defines PresenceRoom aggregate, PoseFrame wire codec (opcode 0x43), pose validators, and port traits shared between the Rust server (Actix WS handler) and the Godot client (godot-rust crate)."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bytes = "1.10"
thiserror = "2"
tracing = "0.1"
nalgebra = "0.34"

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "wire"
harness = false
