[package]
name = "visionflow-adapters"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "VisionFlow adapter implementations: Whelk EL inference engine"
authors = ["jjohare <github@thedreamlab.uk>"]
repository = "https://github.com/jjohare/AR-AI-Knowledge-Graph"

[lib]
path = "src/lib.rs"

[dependencies]
# Workspace domain crate — provides InferenceEngine trait + OWL types
visionflow-domain = { path = "../visionflow-domain" }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }

# Logging / tracing
tracing = "0.1"

# OWL reasoning (whelk_inference_engine)
whelk = { git = "https://github.com/jjohare/whelk-rs", rev = "79a1ee21789add5a66faa0ec1a830c32dba9b539" }
horned-owl = { version = "1.2.0", features = ["remote"] }

# Actix actor messages (messages.rs)
actix = "0.13"

# Oxigraph quad-store (oxigraph_ontology_repository.rs)
oxigraph = { version = "0.4" }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.14"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[lints]

[features]
default = []
