[package]
name = "visionflow-gpu"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "VisionFlow GPU/CUDA kernel infrastructure: PTX loader, CUDA memory utilities, kernel build pipeline"
authors = ["jjohare <github@thedreamlab.uk>"]
repository = "https://github.com/jjohare/AR-AI-Knowledge-Graph"
build = "build.rs"

[lib]
path = "src/lib.rs"

[features]
default = ["gpu"]
gpu = []

[dependencies]
# Domain types
visionflow-domain = { path = "../visionflow-domain" }

# CUDA bindings — the primary reason this crate exists
cust = { version = "0.3.2" }
cust_core = { version = "0.1.1" }
cudarc = { version = "0.12.1", features = ["driver", "cuda-12040"] }

# Utility
log = "0.4"
once_cell = "1.20"
tokio = { version = "1", default-features = false, features = ["sync", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
