[package]
name = "visionflow-ontology"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "VisionFlow ontology crate: OWL parsing, inference, JSON-LD validation, reasoning (ADR-090 Phase A4)"
authors = ["jjohare <github@thedreamlab.uk>"]
repository = "https://github.com/jjohare/AR-AI-Knowledge-Graph"

[lib]
path = "src/lib.rs"

[dependencies]
# Domain crate — port traits (OntologyRepository, InferenceEngine, GraphRepository) + models
visionflow-domain = { path = "../visionflow-domain" }

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"

# Async
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["sync", "rt"] }
futures = "0.3"

# OWL / ontology libs
horned-owl = { version = "1.2.0", features = ["remote"] }
horned-functional = { version = "0.4.0" }
whelk = { git = "https://github.com/jjohare/whelk-rs", rev = "79a1ee21789add5a66faa0ec1a830c32dba9b539" }

# Utilities
regex = "1.11"
once_cell = "1.20"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
blake3 = "1.5"
dashmap = "6.1"
lru = "0.12"
sha2 = "0.10"
toml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Persistence — Oxigraph quad-store (required; ingest pipeline emits Quads)
oxigraph = { version = "0.4" }

[features]
default = []

[lints]
