[package]
name = "visionflow-protocol"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "VisionFlow wire-protocol encode/decode: V3 frame, binary settings, node-flag utilities"
authors = ["jjohare <github@thedreamlab.uk>"]
repository = "https://github.com/jjohare/AR-AI-Knowledge-Graph"

[lib]
path = "src/lib.rs"

[dependencies]
# Domain types: Node/Edge/GraphData, BinaryNodeData, Vec3Data, Constraint, AdvancedParams
visionflow-domain = { path = "../visionflow-domain" }

# Binary encode/decode
bytemuck = { version = "1.21", features = ["derive"] }
byteorder = "1.5"

# Compression (V4 delta / settings protocol)
flate2 = "1.0"

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error types
thiserror = "2.0"

# Logging
log = "0.4"

# Base64 (binary_settings_protocol: Bytes -> JSON string)
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_json = "1.0"
