[package]
name = "solid-pod-rs"
version = "0.3.0-alpha.1"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Rust-native Solid Pod server — LDP-BASIC, WAC, NIP-98, Solid-OIDC, Solid Notifications. Framework-agnostic library crate."
authors = [
    "DreamLab AI contributors",
    "VisionClaw contributors",
    "community-forum-rs contributors",
]
repository = "https://github.com/dreamlab-ai/solid-pod-rs"
homepage = "https://github.com/dreamlab-ai/solid-pod-rs"
documentation = "https://docs.rs/solid-pod-rs"
keywords = ["solid", "pod", "wac", "ldp", "webid"]
categories = ["web-programming::http-server", "web-programming"]
readme = "README.md"
exclude = [
    ".github/**",
]

[lib]
name = "solid_pod_rs"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["fs", "io-util", "sync", "macros", "rt", "time"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
sha2 = "0.10"
hex = "0.4"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
notify = "6"

# SPARQL-Update parsing for PATCH bodies
spargebra = "0.3"

# WebSocketChannel2023 (Solid Notifications 0.2)
tokio-tungstenite = "0.24"
futures-util = "0.3"

# HTTP client for WebhookChannel2023 delivery
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Optional backends
aws-sdk-s3 = { version = "1", optional = true }

# Solid-OIDC (0.1) — DPoP, dynamic client registration, discovery
openidconnect = { version = "4", optional = true }
jsonwebtoken = { version = "9", optional = true }

[features]
default = ["fs-backend", "memory-backend"]
fs-backend = []
memory-backend = []
s3-backend = ["dep:aws-sdk-s3"]
oidc = ["dep:openidconnect", "dep:jsonwebtoken"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
actix-web = "4"
wiremock = "0.6"

[[example]]
name = "standalone"
path = "examples/standalone.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
