[package]
name = "scene-effects"
version = "0.2.0"
edition = "2021"
description = "WASM-powered background scene effects for Three.js knowledge graph visualization"

# Standalone crate: live outside the root webxr workspace so the crate can be
# built independently via `wasm-pack` without invoking server-side features.
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "z"
lto = true
