[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echoloop"
version = "0.1.0"
description = "Real-time AI meeting copilot — meeting superpowers."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["meeting", "copilot", "transcription", "whisper", "llm", "real-time"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "faster-whisper>=1.0.0",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=1.50",
]

[project.optional-dependencies]
deepgram = ["httpx>=0.27"]
hotkey = ["pynput>=1.7"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
echoloop = "main:main"

[tool.setuptools]
py-modules = ["main", "config", "audio_capture", "transcriber", "engine", "ui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
