[package]
name = "drawer-fx"
version = "0.1.0"
edition = "2021"
description = "WASM-powered flow-field caustic background for the enterprise sliding drawer."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "Window",
  "Document",
  "Performance",
  "console",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# Disable wasm-opt — the binaryen/wasm-opt bundled with wasm-pack in this
# container rejects some otherwise-valid output. LLVM opt-level "z" + LTO
# already give us a small binary; skipping wasm-opt is fine.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
